more balancing to manhunt mode